Issue #3596 - Fixes overlapped check-marks

--- a/webcompat/static/css/src/issue-wizard.css
+++ b/webcompat/static/css/src/issue-wizard.css
@@ -463,7 +463,7 @@
 .low.is-validated .input-wrapper::after,
 .low.is-error .input-wrapper::before {
   height: 20px;
-  right: 18px;
+  right: 8px;
   width: 20px;
 }
 
